Fix for blog titles being cut off

--- a/core-bc/modules/theme/src/main/webapp/css/partials/organisms/_blogs-portlet.scss
+++ b/core-bc/modules/theme/src/main/webapp/css/partials/organisms/_blogs-portlet.scss
@@ -46,6 +46,8 @@
       color: $is-blue;
 			font-size: 1.875em;
 			line-height: 1.73333em;
+      text-overflow: inherit;
+      white-space: normal;
 		}
 
 	}
